<resources>
    <string name="app_name">Weather</string>
    <string name="button">Button</string>
    <string name="hello">Hello Release!</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="city_default">Москва</string>
    <string name="city_coordinates_default">lt/ln: 55.755826, 37.617299900000035</string>
    <string name="city_coordinates">lt/ln: $s, $s"</string>
    <string name="temperature_label">Температура</string>
    <string name="temperature_value_default">+15</string>
    <string name="feels_like_label">Ощущается как</string>
    <string name="local_server">Local Server</string>
    <string name="remote_server">Remote Server</string>
    <string name="open">Открыть</string>
    <string name="menu_title_history">history</string>

    <string name="dialog_button_close">Закрыть</string>
    <string name="dialog_title_no_gps">Доступ к геолокации закрыт</string>
    <string name="dialog_message_no_gps">Разрешите доступ к геолокации, если хотите узнать погоду текущего места</string>
    <string name="dialog_title_gps_turned_off">GPS отключён</string>
    <string name="dialog_message_last_location_unknown">Местонахождение неизвестно. Включите GPS, если хотите получить погоду по текущему адресу</string>
    <string name="dialog_message_last_known_location">Показана последняя известная локация. Включите GPS, если хотите обновить местонахождение</string>
    <string name="dialog_rationale_title">Доступ к геолокации</string>
    <string name="dialog_rationale_message">Объяснение</string>
    <string name="dialog_rationale_give_access">Предоставить доступ</string>
    <string name="dialog_rationale_decline">Не надо</string>
    <string name="dialog_address_title">Ваш адрес</string>
    <string name="dialog_address_get_weather">Узнать погоду</string>
    <string name="menu_maps">google maps</string>
    <string name="button_search_map">Search</string>
    <string name="address_edittext">введите адрес</string>

</resources>